--- a/index.html
+++ b/index.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Number Guessing Game</title>
 </head>
 <body>
     <header>
         <h1>Guess Number</h1>
-        <p>Between (1 - 20)</p>
-        <button>Start Again</button>
-        <div>?</div>
+        <p class="between">Between (1 - 20)</p>
+        <button class="again">Start Again</button>
+        <div class="number">?</div>
     </header>
     <main>
         <section class="left">
-            <input type="number">
-            <button>Check it!</button>
+            <input class="guess" type="number">
+            <button class="btn">Check it!</button>
         </section>
         <section class="right">
-            <p>Guessing...</p>
-            <p>Score : 20</p>
+            <p class="message">Guessing...</p>
+            <p class="label-score">Score : 20</p>
             <p>The Highest Score : 0</p>
         </section>
     </main>
