--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
     <header>
         <h1>Guess Number</h1>
         <p class="between">Between (1 - 20)</p>
-        <button class="again">Start Again</button>
+        <button class="btn again">Start Again</button>
         <div class="number">?</div>
     </header>
     <main>
         <section class="left">
             <input class="guess" type="number">
-            <button class="btn">Check it!</button>
+            <button class="btn check">Check it!</button>
         </section>
         <section class="right">
             <p class="message">Guessing...</p>
-            <p class="label-score">Score : 20</p>
-            <p>The Highest Score : 0</p>
+            <p class="score">Score : 20</p>
+            <p class="highscore">The Highest Score : 0</p>
         </section>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
